Initial commit: FlashFire Client Tracking Portal with authentication system

--- a/applications-monitor-backend-main/.env.example
+++ b/applications-monitor-backend-main/.env.example
@@ -1,18 +1,16 @@
+# Database Configuration
+MONGODB_URI=mongodb://localhost:27017/applications-monitor
+
 # Server Configuration
 PORT=8086
 NODE_ENV=development
 
-# Database Configuration
-MONGODB_URI=mongodb+srv://your-username:your-password@your-cluster.mongodb.net/your-database?retryWrites=true&w=majority
-
 # JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_SECRET=your_super_secret_jwt_key_here
 
 # Admin Configuration
-ADMIN_EMAILS=tripathipranjal01@gmail.com,adit.jain606@gmail.com
+ADMIN_EMAILS=admin1@example.com,admin2@example.com
+ADMIN_PASSWORD=your_admin_password_here
 
-# CORS Configuration
+# CORS Configuration (optional)
 CORS_ORIGIN=http://localhost:5173
-
-# Session Key Configuration
-SESSION_KEY_DURATION=24
