--- a/applications-monitor-frontend-main/.env.example
+++ b/applications-monitor-frontend-main/.env.example
@@ -1,5 +1,6 @@
 # API Configuration
 VITE_API_URL=http://localhost:8086
 
-# Environment
-VITE_NODE_ENV=development
+# App Configuration
+VITE_APP_NAME=FlashFire Portal
+VITE_APP_DESCRIPTION=Client Tracking Portal
