Remove all localhost references and make environment variables required
- Remove hardcoded localhost URLs from all components
- Add validation for required environment variables
- Update .env.example files to show required variables
- Update README with clear environment variable requirements
- Make application fully configurable via environment variables

--- a/applications-monitor-backend-main/.env.example
+++ b/applications-monitor-backend-main/.env.example
@@ -1,16 +1,16 @@
-# Database Configuration
-MONGODB_URI=mongodb://localhost:27017/applications-monitor
+# Database Configuration (REQUIRED)
+MONGODB_URI=your_mongodb_connection_string_here
 
 # Server Configuration
 PORT=8086
 NODE_ENV=development
 
-# JWT Configuration
+# JWT Configuration (REQUIRED)
 JWT_SECRET=your_super_secret_jwt_key_here
 
-# Admin Configuration
+# Admin Configuration (REQUIRED)
 ADMIN_EMAILS=admin1@example.com,admin2@example.com
 ADMIN_PASSWORD=your_admin_password_here
 
-# CORS Configuration (optional)
-CORS_ORIGIN=http://localhost:5173
+# CORS Configuration (REQUIRED)
+CORS_ORIGIN=your_frontend_url_here
