--- a/applications-monitor-frontend-main/.env.example
+++ b/applications-monitor-frontend-main/.env.example
@@ -1,5 +1,5 @@
-# API Configuration
-VITE_API_URL=http://localhost:8086
+# API Configuration (REQUIRED)
+VITE_API_URL=your_backend_api_url_here
 
 # App Configuration
 VITE_APP_NAME=FlashFire Portal
