--- a/applications-monitor-frontend-main/.env
+++ b/applications-monitor-frontend-main/.env
@@ -1,1 +1,2 @@
-VITE_BASE=https://applications-monitor-backend.onrender.com
+VITE_BASE=http://localhost:8086
+# https://applications-monitor-backend.onrender.com
