--- a/applications-monitor-frontend-main/.env
+++ b/applications-monitor-frontend-main/.env
@@ -1,2 +1,3 @@
-VITE_BASE=http://localhost:8086
+VITE_BASE=https://clients-tracking.onrender.com
 # https://applications-monitor-backend.onrender.com
+# http://localhost:8086
