--- a/applications-monitor-backend-main/package.json
+++ b/applications-monitor-backend-main/package.json
@@ -10,11 +10,18 @@
     "build": "echo \"Backend build completed\"",
     "prod": "NODE_ENV=production node index.js"
   },
-  "keywords": ["tracking", "portal", "api", "authentication", "mongodb"],
+  "keywords": [
+    "tracking",
+    "portal",
+    "api",
+    "authentication",
+    "mongodb"
+  ],
   "author": "FlashFire Team",
   "license": "UNLICENSED",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
