--- a/applications-monitor-backend-main/package.json
+++ b/applications-monitor-backend-main/package.json
@@ -23,13 +23,16 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.25.8",
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "twilio": "^5.3.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
